# defender-schemas-to-kustainer

./: .gitignore  .gitmodules  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
