[project]
name = "defender-schemas-to-kustainer"
version = "0.1.0"
description = "Python script that maps Microsoft Defender XDR Schemas to a local Kustainer Data Explorer instance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-kusto-data>=4.6.3",
    "loguru>=0.7.3",
    "termcolor>=2.5.0",
]
